adds new markup for modal inputs

--- a/index.html
+++ b/index.html
@@ -430,9 +430,9 @@
               </div>
             </div>
 
-            <label class="form-input-block">
-              <span class="label">Телефон</span>
-              <span class="input-box">
+            <div class="form-input-block">
+              <label class="label">Телефон</label>
+              <div class="input-box">
                 <input
                   type="tel"
                   name="tel"
@@ -445,12 +445,12 @@
                 <svg width="18px" height="18px" class="input-box-modal-svg">
                   <use href="./images/icons/sprite.svg#icon-phone"></use>
                 </svg>
-              </span>
-            </label>
+              </div>
+            </div>
 
-            <label class="form-input-block">
-              <span class="label">Почта</span>
-              <span class="input-box">
+            <div class="form-input-block">
+              <label class="label">Почта</label>
+              <div class="input-box">
                 <input
                   type="email"
                   name="email"
@@ -462,8 +462,8 @@
                 <svg width="18px" height="18px" class="input-box-modal-svg">
                   <use href="./images/icons/sprite.svg#icon-email"></use>
                 </svg>
-              </span>
-            </label>
+              </div>
+            </div>
 
             <div class="form-input-block">
               <label class="label" for="comment">Комментарий</label>
@@ -479,7 +479,7 @@
               <svg class="icon-checkbox" width="16px" height="15px">
                 <use href="./images/icons/sprite.svg#icon-check"></use>
               </svg>
-              Соглашаюсь с рассылкой и принимаю&nbsp
+              Соглашаюсь с рассылкой и принимаю&nbsp;
               <a class="license-link" href="">Условия договора</a>
             </label>
 
